Add blog template to Netlify CMS

--- a/admin/index.html
+++ b/admin/index.html
@@ -3,16 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
-    <!-- Load Netlify CMS (Decap/Netlify CMS app) -->
-    <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <h3>Netlify CMS - loading...</h3>
-    <script>
-      // Initialize Netlify CMS
-      if(typeof NetlifyCmsApp !== 'undefined'){
-        NetlifyCmsApp.init();
-      }
-    </script>
+    <!-- Load Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms-app@latest/dist/netlify-cms.js"></script>
   </body>
 </html>
